# uwrt_software_trainining

./: .gitignore  CMakeLists.txt  README.md  moving_turtle.action  package.xml
action/: Moving.action
include/software_training_assignment/: circular_turtle.hpp  circular_turtle_node.hpp  clear_turtles_node.hpp  moving_turtle_action_node.hpp  reset_turtle_node.hpp  spawn_turtles_node.hpp  turtle_distance_node.hpp
log/: latest_build
msg/: Software.msg
software_training/: CMakeLists.txt  package.xml
software_training/action/: Software.action
software_training/include/software_training/: cmd_vel_moving_turt_publisher.hpp  moving_turtle_action_server.hpp  reset_moving_turtle_service.hpp  spawn_turtle_nodelet.hpp  turtle_neutralize.hpp  turtle_publisher.hpp  visibility.h
software_training/launch/: software_training.launch.py
software_training/src/: cmd_vel_moving_turt_publisher.cpp  moving_turtle_action_server.cpp  reset_moving_turtle_service.cpp  spawn_turtle_nodelet.cpp  turtle_neutralize.cpp  turtle_publisher.cpp
software_training_assignment/: CMakeLists.txt  package.xml
software_training_assignment/action/: Software.action
software_training_assignment/include/software_training_assignment/: cmd_vel_moving_turt_publisher.hpp  moving_turtle_action_server.hpp  reset_moving_turtle_service.hpp  spawn_turtle_nodelet.hpp  turtle_neutralize.hpp  turtle_publisher.hpp  visibility.h
software_training_assignment/launch/: software_training.launch.py
software_training_assignment/msg/: Software.msg
software_training_assignment/src/: cmd_vel_moving_turt_publisher.cpp  moving_turtle_action_server.cpp  reset_moving_turtle_service.cpp  spawn_turtle_nodelet.cpp  turtle_neutralize.cpp  turtle_publisher.cpp
src/: circular_turtle.cpp  circular_turtle_node.cpp  clear_turtles_node.cpp  moving_turtle_action_node.cpp  reset_turtle_node.cpp  spawn_turtles_node.cpp  turtle_distance_node.cpp
